# Jungol_Sol

./: CMakeLists.txt  CMakeSettings.json  MainApp.cpp  README.md
Improve_Skills/: CMakeLists.txt
Improve_Skills/Code1291/: Code1291.cpp  Code1291.h
Improve_Skills/Code1303/: Code1303.cpp  Code1303.h
Improve_Skills/Code1304/: Code1304.cpp  Code1304.h
Improve_Skills/Code1307/: Code1307.cpp  Code1307.h
Improve_Skills/Code1314/: Code1314.cpp  Code1314.h
Improve_Skills/Code1329/: Code1329.cpp  Code1329.h
Improve_Skills/Code1337/: Code1337.cpp  Code1337.h
Improve_Skills/Code1338/: Code1338.cpp  Code1338.h
Improve_Skills/Code1339/: Code1339.cpp  Code1339.h
Improve_Skills/Code1341/: Code1341.cpp  Code1341.h
Improve_Skills/Code1523/: Code1523.cpp  Code1523.h
Improve_Skills/Code1641/: Code1641.cpp  Code1641.h
Improve_Skills/Code1707/: Code1707.cpp  Code1707.h
Improve_Skills/Code1719/: Code1719.cpp  Code1719.h
Improve_Skills/Code1856/: Code1856.cpp  Code1856.h
Improve_Skills/Code2046/: Code2046.cpp  Code2046.h
Improve_Skills/Code2071/: Code2071.cpp  Code2071.h
